# secprint

./: .gitignore  .travis.yml  README.md  build_library  pyproject.toml  setup.py  upload_to_pypi  upload_to_test_pypi
context_printer/: README.md  context_printer.py  example1.py  setup.py
context_printer/context_printer/: __init__.py  color.py  context_printer.py  decorator.py  memory.py  printer.py
contextprinter/: .travis.yml  README  contextprinter.py  setup.py
examples/: example0.py  example1.py  example10.py  example11.py  example12.py  example13.py  example14.py  example15.py  example16.py  example17.py  example18.py  example19.py  example2.py  example3.py  example4.py  example5.py  example6.py  example7.py  example8.py  example9.py
output_decorator/: example2.py  example3.py
secprint/: __init__.py
src/secprint/: secprint.py
tests/examples/: example1.py  example10.py  example11.py  example13.py  example15.py  example16.py  example2.py  example4.py  example5.py  example6.py  example7.py  example9.py
